<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        app:srcCompat="@drawable/img_cbc"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_loginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp">

        <EditText
            android:id="@+id/txtLoginId_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Login ID"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp">

        <EditText
            android:id="@+id/txtMPINLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="MPIN"
            android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLoginL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loginClicked"
        android:text="Login"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/shape_button_background"/>

    <TextView
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:textSize="@dimen/font_10dp"
        android:inputType="textMultiLine|textPersonName"
        android:text="This is a demo app used for POC purpose.\n This app does not perform a real transaction"
        android:textAlignment="center" />

</LinearLayout>

