<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uniken.poc.pocwallet.MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:visibility="visible" />

</android.support.constraint.ConstraintLayout>
